@@ -1,5 +1,7 @@
 #VERSION 0.9.5#
  
+ - added a param to method show() of class Peak_View_Helper_Debugbar that make the bar starting minimized. 
+   By default, this new param is set to false.
  - fixed a notice about object to string conversion in method _proccessVariables() of class Peak_View_Render_VirtualLayouts
  - fixed a problem with paths of files in chrono section of class Peak_View_Helper_Debugbar.
  - added property $_is_calculated to Peak_Model_Pagination. With this, we are not forced to call calculate() before 
